Add containers for character sheet and contents

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.scss" />
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
   </head>
   <body>
-    meow
+    <article class="sheet" id="sheet">
+      <div class="character-info-container" id="character-info-container"></div>
+      <div class="attributes" id="attributes"></div>
+      <div class="info-column" id="info-column"></div>
+    </article>
   </body>
 </html>
